--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,3 +1,8 @@
+# Copyright 2021 The pacman Authors. All rights reserved.
+# Use of this source code is governed by a MIT
+# license that can be found in the LICENSE file.
+
+---
 name: Go
 
 on:
@@ -16,12 +21,12 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.17
+          go-version: 1.19
 
       - name: Setup golangci-lint
         uses: golangci/golangci-lint-action@v3.2.0
         with:
-          version: v1.46.2
+          version: v1.48.0
 
       - name: Lint
         run: golangci-lint run -v -c .golangci.yml
